2001-03-08  Hans Petter Jansson  <hpj@ximian.com>

	* Makefile.am: Remove nameresolution-conf relics.

2001-03-08  Hans Petter Jansson  <hpj@ximian.com>

	* general.pl.in: Add $xst_debug flag.
	  (xst_init): Honour --debug arg and XST_DEBUG env. Also some
	  comments.

	* debug.pl.in (xst_debug_print_indent): Use xst_debug_print_string().
	  (xst_debug_print_string): Print to STDERR only if $xst_debug set.

2001-03-08  Hans Petter Jansson  <hpj@ximian.com>

	* xml.pl.in (xst_xml_quote): return() -> return, makes code look
	  more uniform.
	  (xst_xml_get_word): Missing semicolon added.
	  (xst_xml_get_text): Missing semicolon added.

2001-03-08  Hans Petter Jansson  <hpj@ximian.com>

	* debug.pl.in (xst_debug_open_output_file): Implement.
	  (xst_debug_print_string_to_file): Implement.
	  (xst_debug_print_indent): Print to file. More efficient.
	  (xst_debug_rotate_try): Fix bug that would lead to multiple
	  rotations on one backend invocation.

	* file.pl.in (xst_open_read_from_names): Use debug funcs.
	  (xst_buffer_save): Use debug funcs.

	* xml.pl.in (xst_xml_scan): Dump scanned XML to in.xml.
	  (xst_xml_get_pcdata): Use debug funcs.

2001-03-08  Arturo Espinosa  <arturo@ximian.com>

	* replace.pl.in (xst_replace_from_table): big oops here. A
	  line of old code (51) wasn't deleted and this prevented any
	  changes to take place.
	* network.pl.in (xst_network_ensure_loopback_interface): Ensure
	  the interface is activated if it already exists.
	* parse.pl.in: line analyzers take care of reading the file, so
	  we can have routines that read more than one line, etc.
	* time-conf.in: replace table, but this isn't working yet.
	
	
2001-03-06  Arturo Espinosa  <arturo@ximian.com>

	* network-conf.in: moved xml_print stuff to xml.pl.in. Removed
	  stale set_immediate code.
	* parse.pl.in: xst_parse_replace files. Now it is possible to
	  pass a reference to an array with several files to be replaced